better fix ios hover bug in navbar and smoother transition therefore on mobile

--- a/support/less/nprogress/nprogress-custom.less
+++ b/support/less/nprogress/nprogress-custom.less
@@ -1,5 +1,5 @@
-@color-nprogress: @color-links;
-@color-nprogress-spinner: @color-links-hover;
+@color-nprogress: rgb(38, 139, 210); //@color-links;
+@color-nprogress-spinner: rgb(38, 139, 210); //@color-links-hover;
 
 @nprogress-height: 2px;
 
